fixing layout bug

--- a/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
+++ b/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
@@ -629,7 +629,7 @@ html, body, #content, .content, .content-wrapper, #terrama2-map {
   background-color: rgba(255,255,255,0.6);
   width: 100%;
   bottom: 0;
-  z-index: 99999;
+  z-index: 9999999;
   cursor: default;
 }
 
